distribution/kubeflow/central-dashboard/base/enable-registration-flow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centraldashboard
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: centraldashboard
